修正 並改善連接
1.VueDemo
2.Session 防呆
3. Layout new connect

--- a/MyWebNorthwind/Views/Shared/_Layout.cshtml
+++ b/MyWebNorthwind/Views/Shared/_Layout.cshtml
@@ -28,7 +28,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="customersQueryByCountry">撈取客戶資訊</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="jQueryDemo" asp-action="Index">jQuery語法練習</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="VueDemo" asp-action="Index">Vue語法練習</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserList" asp-action="Index">API接資料練習</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RazorDemo" asp-action="Index">Razor語法練習</a>
                         </li>
                     </ul>
                 </div>
