modity url misstake
修正 IIS 部屬 ,相對位置url

--- a/MyWebNorthwind/Views/Nav/Index.cshtml
+++ b/MyWebNorthwind/Views/Nav/Index.cshtml
@@ -17,7 +17,7 @@
             // 發送 AJAX 請求，取得超連結位址列表
             $.ajax({
                 //url: "api/getLinks",
-                url: "/getLinks",
+                url: "/api/getLinks",
                 success: function (data) {
                     // 將超連結位址列表加入到導覽列中
                     for (var i = 0; i < data.length; i++) {
