--- a/MyWebNorthwind/Views/Shared/_Layout.cshtml
+++ b/MyWebNorthwind/Views/Shared/_Layout.cshtml
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="2022_T8-C#_FullStack_Practice" />
+    <meta property="og:url" content="https://enlinxa077.mooo.com/MyWeb" />
+    <meta property="og:site_name" content="練習全端開發" />
+    <meta property="og:description" content="描述或摘要:建立網站過程真有趣~!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MyWebNorthwind</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
